workloads/knative-serving/knative-serving.ns.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: knative-serving
  labels:
    istio-injection: enabled
    serving.knative.dev/release: devel
