workloads/knative-serving/autoscaler.svc.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: autoscaler
  namespace: knative-serving
  labels:
    app: autoscaler
    serving.knative.dev/release: devel

spec:
  selector:
    app: autoscaler
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
