workloads/knative-serving/controller.deploy.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: controller
  namespace: knative-serving
  labels:
    serving.knative.dev/release: devel
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.autoscaler: regexp:^0\.5\.[0-9]+$ # 0.5.x

spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: controller
    spec:
      serviceAccountName: controller
      containers:
        - name: controller
          image: gcr.io/knative-releases/github.com/knative/serving/cmd/controller:v0.5.2
          ports:
            - name: metrics
              containerPort: 9090
          resources:
            requests:
              cpu: 75m
              memory: 75Mi
            limits:
              cpu: 300m
              memory: 300Mi
          volumeMounts:
            - name: config-logging
              mountPath: /etc/config-logging
      volumes:
        - name: config-logging
          configMap:
            name: config-logging

---

apiVersion: v1
kind: Service

metadata:
  name: controller
  namespace: knative-serving
  labels:
    app: controller
    serving.knative.dev/release: devel

spec:
  selector:
    app: controller
  ports:
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
