workloads/knative-serving/controller.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: controller
  namespace: knative-serving
  labels:
    app: controller
    serving.knative.dev/release: devel

spec:
  selector:
    app: controller
  ports:
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: 9090
