workloads/knative-serving/webhook.deploy.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: webhook
  namespace: knative-serving
  labels:
    serving.knative.dev/release: devel
  annotations:
    flux.weave.works/automated: "true"
    flux.weave.works/tag.autoscaler: regexp:^0\.5\.[0-9]+$ # 0.5.x

spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook
      role: webhook
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: webhook
        role: webhook
    spec:
      serviceAccountName: controller
      containers:
        - name: webhook
          image: gcr.io/knative-releases/github.com/knative/serving/cmd/webhook:v0.6.0
          volumeMounts:
            - name: config-logging
              mountPath: /etc/config-logging
          resources:
            requests:
              cpu: 1m
              memory: 5Mi
            limits:
              cpu: 100m
              memory: 100Mi
      volumes:
        - name: config-logging
          configMap:
            name: config-logging

---

apiVersion: v1
kind: Service

metadata:
  name: webhook
  namespace: knative-serving
  labels:
    role: webhook
    serving.knative.dev/release: devel

spec:
  selector:
    role: webhook
  ports:
    - port: 443
      targetPort: 443
