workloads/knative-serving/cluster-local-gateway.gw.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
  name: cluster-local-gateway
  namespace: knative-serving
  labels:
    networking.knative.dev/ingress-provider: istio
    serving.knative.dev/release: devel

spec:
  selector:
    istio: cluster-local-gateway
  servers:
    - hosts: ["*"]
      port:
        name: http
        number: 80
        protocol: HTTP
